--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div class="illustration">
     <div class="header">1. Black Youth in a group</div>
     <div class="img">
-        <img src="black_youth_in_a_group.svg" alt="">
+        <img src="black_youth_in_a_group.png" alt="">
     </div>
 </div>
 <div class="illustration">
@@ -51,13 +51,19 @@
 <div class="illustration">
     <div class="header">5. Youth in a garden with agricultural worker</div>
     <div class="img">
-        <img src="youth_in_a_garden.svg" alt="">
+        <img src="youth_in_a_garden_1.svg" alt="">
     </div>
 </div>
 <div class="illustration">
     <div class="header">6. Money in stack</div>
     <div class="img">
         <img src="pile_of_money.svg" alt="">
+    </div>
+</div>
+<div class="illustration">
+    <div class="header">7. Seed supply</div>
+    <div class="img">
+        <img src="seed_supply.svg" style="height:400px" alt="">
     </div>
 </div>
 </body>
