--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <div class="illustration">
     <div class="header">5. Youth in a garden with agricultural worker</div>
     <div class="img">
-        <img src="youth_in_a_garden_1.svg" alt="">
+        <img src="youth_in_a_garden.svg" alt="">
     </div>
 </div>
 <div class="illustration">
@@ -64,6 +64,12 @@
     <div class="header">7. Seed supply</div>
     <div class="img">
         <img src="seed_supply.svg" style="height:400px" alt="">
+    </div>
+</div>
+<div class="illustration">
+    <div class="header">8. Youth on construction site</div>
+    <div class="img">
+        <img src="youth_on_construction_site.svg" style="height:600px" alt="">
     </div>
 </div>
 </body>
