add weighing scale

--- a/index.html
+++ b/index.html
@@ -72,5 +72,11 @@
         <img src="youth_on_construction_site.svg" style="height:600px" alt="">
     </div>
 </div>
+<div class="illustration">
+    <div class="header">9. Weighing Scale</div>
+    <div class="img">
+        <img src="weighing_scale.svg">
+    </div>
+</div>
 </body>
 </html>
