--- a/index.html
+++ b/index.html
@@ -78,5 +78,17 @@
         <img src="weighing_scale.svg">
     </div>
 </div>
+<div class="illustration">
+    <div class="header">10. Youth Shaking hands with guy in suit</div>
+    <div class="img">
+        <img src="youth_shaking_hands_with_guy_in_suit.svg">
+    </div>
+</div>
+<div class="illustration">
+    <div class="header">11. Mentorship</div>
+    <div class="img">
+        <img src="mentorship.svg">
+    </div>
+</div>
 </body>
 </html>
