--- a/index.html
+++ b/index.html
@@ -90,5 +90,17 @@
         <img src="mentorship.svg">
     </div>
 </div>
+<div class="illustration">
+    <div class="header">12. Leadership</div>
+    <div class="img">
+        <img src="leadership.svg">
+    </div>
+</div>
+<div class="illustration">
+    <div class="header">12. Lifeskills</div>
+    <div class="img">
+        <img src="lifeskills.svg">
+    </div>
+</div>
 </body>
 </html>
