add boy next to village

--- a/index.html
+++ b/index.html
@@ -102,5 +102,11 @@
         <img src="lifeskills.svg">
     </div>
 </div>
+<div class="illustration">
+    <div class="header">13. Boy next to village</div>
+    <div class="img">
+        <img src="boy_next_to_village.svg">
+    </div>
+</div>
 </body>
 </html>
