add girl next to construction site

--- a/index.html
+++ b/index.html
@@ -108,5 +108,11 @@
         <img src="boy_next_to_village.svg">
     </div>
 </div>
+<div class="illustration">
+    <div class="header">14. Girl next to construction site</div>
+    <div class="img">
+        <img src="girl_next_to_construction_site.svg">
+    </div>
+</div>
 </body>
 </html>
